install/openfaas/caddy.yaml

apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: openfaas
  labels:
    app: caddy
spec:
  type: NodePort
  ports:
    - port: 80
      name: web
      nodePort: 30049
  selector:
    app: caddy

---

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: caddy
  namespace: openfaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
      - name: caddy
        image: abiosoft/caddy:0.10.10
        imagePullPolicy: Always
        command: ["caddy", "--conf", "/Caddyfile"]
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            memory: 128Mi
        volumeMounts:
        - mountPath: /Caddyfile
          name: caddy-config
          subPath: Caddyfile
      volumes:
        - name: caddy-config
          configMap:
            name: caddy-config
            items:
              - key: Caddyfile
                path: Caddyfile
                mode: 0644
